Adding disqus to notes.

--- a/CSS/DCF-style.css
+++ b/CSS/DCF-style.css
@@ -11,3 +11,8 @@ body {
         margin:12pt;
         float: left;
       }
+      .displayAsFigure{
+        background-color: ghostwhite;
+        padding:12pt;
+      }
+      
