--- a/CSS/DCF-style.css
+++ b/CSS/DCF-style.css
@@ -15,4 +15,17 @@ body {
         background-color: ghostwhite;
         padding:12pt;
       }
+      .table-scroller300 {
+        width: 300px;
+        height: 200px;
+        overflow-x: scroll;
+        overflow-y: scroll;
+      }
+      .table-scroller600 {
+        width: 600px;
+        height: 200px;
+        overflow-x: scroll;
+        overflow-y: scroll;
+      }
+}
       
